--- a/styles/global.css
+++ b/styles/global.css
@@ -33,8 +33,9 @@ body {
 }
 
 .container {
-  width: min(112rem, 100%);
-  margin: 0 auto;
+  width: 1280px;
+  padding-inline: 32px;
+  margin-inline: auto;
 }
 
 .sr-only {
@@ -61,4 +62,13 @@ h1,
 h2,
 h3{
   font: inherit;
+}
+
+/* utility-first*/
+.grid{
+  display: grid;
+}
+
+.grid-flow-col{
+  grid-auto-flow: column;
 }
