--- a/styles/global.css
+++ b/styles/global.css
@@ -64,11 +64,10 @@ h3{
   font: inherit;
 }
 
-/* utility-first*/
-.grid{
-  display: grid;
+img{
+  max-width: 100%;
 }
 
-.grid-flow-col{
-  grid-auto-flow: column;
+main{
+  margin-top: 40px;
 }
